fix(1): wire Phase 2 annotation flags to live detector instances
Phase 2 @AsyncTest flags (detectFalseSharing, detectABAProblem, etc.)
were declared in the annotation but never passed to ConcurrencyRunner,
making them completely silent.

- Add AsyncTestConfig: immutable value object replacing the 15-argument
  ConcurrencyRunner.execute() signature; built from @AsyncTest via
  AsyncTestConfig.from(ann).
- Add AsyncTestContext: installs one shared Phase 2 detector instance
  per test run into every worker thread's ThreadLocal, so test code can
  call AsyncTestContext.falseSharingDetector() / .abaProblemDetector()
  etc. without creating detectors manually.
- ConcurrencyRunner creates AsyncTestContext from config, installs/
  uninstalls it around each thread invocation, and calls analyzeAll()
  on timeout or failure to print Phase 2 reports to stderr.
- AsyncTestInvocationInterceptor now passes AsyncTestConfig.from()
  instead of individual parameters.
- Add AsyncTestContextTest: verifies detectors are accessible inside
  @AsyncTest, null outside, throw on disabled flags, and that the same
  instance is shared across all threads and invocation rounds.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>